<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        android:title="Search"
        app:showAsAction="ifRoom"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/multiple_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/multiple_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/select"
        android:title="@string/select"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/more"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom"
        />

</menu>