<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:fileDetailActivity=".activity.DirectChatActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Direct Chat"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="30sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_text"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:text="@string/phone_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/cpp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <EditText
                    android:id="@+id/input_field"
                    android:inputType="number"
                    android:hint="@string/phone_number"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_field_message"
                android:inputType="text"
                android:hint="@string/message"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_height="0dp" />




                <Button
                    android:id="@+id/message_button"
                    android:text="@string/send"
                    android:padding="4dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_button" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/test_banner"/>

</RelativeLayout>